--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Valeriy Zimnev",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "directory-tree": "^2.1.0"
+  },
+  "devDependencies": {
+    "node-sass": "^4.9.2"
+  }
 }
