BROWSER SYNC RELOADING

--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "copy-dir": "^0.4.0",
-    "directory-tree": "^2.1.0"
+    "directory-tree": "^2.1.0",
+    "zmnv-style-defaults": "^1.0.1"
   },
   "devDependencies": {
+    "browser-sync": "^2.24.6",
+    "gulp": "^3.9.1",
+    "gulp-exec": "^3.0.2",
+    "gulp-sass": "^4.0.1",
     "node-sass": "^4.9.2"
   }
 }
