--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Сканирует директорию и генерирует HTML-файл с отображением картинок внутри папок",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp",
+    "clean": "gulp clean"
   },
   "author": "Valeriy Zimnev",
   "license": "ISC",
