--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "copy-dir": "^0.4.0",
     "directory-tree": "^2.1.0",
+    "express": "^4.16.3",
     "zmnv-style-defaults": "^1.0.1"
   },
   "devDependencies": {
