--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "gulp",
     "build": "gulp build",
+    "prod": "gulp build && node server.js",
     "clean": "gulp clean"
   },
   "author": "Valeriy Zimnev",
@@ -21,6 +22,7 @@
     "gulp": "^3.9.1",
     "gulp-exec": "^3.0.2",
     "gulp-sass": "^4.0.1",
+    "ip": "^1.1.5",
     "node-sass": "^4.9.2"
   }
 }
