--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "gulp",
-    "build": "gulp build",
-    "prod": "gulp build && node server.js",
+    "build": "node app.js && gulp sass",
+    "server": "node server.js",
+    "prod": "npm run build && npm run server",
     "clean": "gulp clean"
   },
   "author": "Valeriy Zimnev",
@@ -23,6 +24,7 @@
     "gulp-exec": "^3.0.2",
     "gulp-sass": "^4.0.1",
     "ip": "^1.1.5",
-    "node-sass": "^4.9.2"
+    "node-sass": "^4.9.2",
+    "readline": "^1.3.0"
   }
 }
