--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-sass": "^4.0.1",
     "ip": "^1.1.5",
     "node-sass": "^4.9.2",
+    "opn": "^5.3.0",
     "readline": "^1.3.0"
   }
 }
