--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "browser-sync": "^2.24.6",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
     "gulp-exec": "^3.0.2",
     "gulp-sass": "^4.0.1",
     "ip": "^1.1.5",
