--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "img-presents",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "Сканирует директорию и генерирует HTML-файл с отображением картинок внутри папок",
   "main": "app.js",
   "scripts": {
-    "start": "gulp",
+    "start": "node ./src/console-menu/menu.js",
+    "dev": "gulp",
     "build": "node app.js && gulp sass",
     "server": "node server.js",
     "prod": "npm run build && npm run server",
@@ -25,6 +26,7 @@
     "gulp-exec": "^3.0.2",
     "gulp-sass": "^4.0.1",
     "ip": "^1.1.5",
+    "keypress": "^0.2.1",
     "node-sass": "^4.9.2",
     "opn": "^5.3.0",
     "readline": "^1.3.0"
