--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "node app.js && gulp sass",
     "server": "node server.js",
     "prod": "npm run build && npm run server",
+    "prod:ab": "cross-env TYPETEST=AB npm run prod",
     "clean": "gulp clean"
   },
   "author": "Valeriy Zimnev",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.24.6",
+    "cross-env": "^5.2.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "gulp-exec": "^3.0.2",
