Сделал ABTESTING основным, а чистый — CLEAR

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "start": "node ./src/console-menu/menu.js",
     "dev": "gulp",
-    "dev:ab": "cross-env TYPETEST=AB npm run dev",
+    "dev:clear": "cross-env LAYOUT=CLEAR npm run dev",
     "build": "node app.js && gulp sass",
     "server": "node server.js",
     "prod": "npm run build && npm run server",
-    "prod:ab": "cross-env TYPETEST=AB npm run prod",
+    "prod:clear": "cross-env LAYOUT=CLEAR npm run prod",
     "clean": "gulp clean"
   },
   "author": "Valeriy Zimnev",
