--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "copy-dir": "^0.4.0",
     "directory-tree": "^2.1.0",
     "express": "^4.16.3",
+    "sanitize-filename": "^1.6.1",
     "zmnv-style-defaults": "^1.0.1"
   },
   "devDependencies": {
