--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
   "name": "zmnv-gg",
-  "version": "1.4.1",
+  "version": "1.4.5",
   "description": "Gallery preview generator. Convert file structure with images to simple HTML page with thumbnails.",
   "main": "app.js",
   "scripts": {
     "start": "node ./src/console-menu/menu.js",
     "dev": "gulp",
-    "dev:clear": "cross-env LAYOUT=CLEAR npm run dev",
+    "dev:checks": "cross-env LAYOUT=CHECKS npm run dev",
     "build": "node app.js && gulp sass",
     "serve": "node server.js",
-    "prod": "npm run build && npm run server",
-    "prod:clear": "cross-env LAYOUT=CLEAR npm run prod",
+    "prod": "npm run build && npm run serve",
+    "prod:checks": "cross-env LAYOUT=CHECKS npm run prod",
     "clean": "gulp clean"
   },
   "author": "Valeriy Zimnev",
   "license": "ISC",
   "dependencies": {
     "copy-dir": "^0.4.0",
-    "directory-tree": "^2.1.0",
-    "express": "^4.16.3",
+    "directory-tree": "^2.2.1",
+    "express": "^4.16.4",
     "sanitize-filename": "^1.6.1",
     "zmnv-style-defaults": "^1.0.1"
   },
   "devDependencies": {
-    "browser-sync": "^2.24.6",
+    "browser-sync": "^2.26.3",
     "chalk": "^2.4.2",
     "cross-env": "^5.2.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "gulp-exec": "^3.0.2",
-    "gulp-sass": "^4.0.1",
+    "gulp-sass": "^4.0.2",
     "ip": "^1.1.5",
     "keypress": "^0.2.1",
-    "node-sass": "^4.9.2",
-    "opn": "^5.3.0",
+    "node-sass": "^4.11.0",
+    "opn": "^5.4.0",
     "readline": "^1.3.0"
   }
 }
