--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zmnv-gg",
   "version": "1.4.5",
-  "description": "Gallery preview generator. Convert file structure with images to simple HTML page with thumbnails.",
+  "description": "Gallery preview generator. Converts file structure with images to simple HTML page with thumbnails.",
   "main": "app.js",
   "scripts": {
     "start": "node ./src/console-menu/menu.js",
