РАБОТАЕТ. Генерация файлов в текущей папке

--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   },
   "devDependencies": {
     "browser-sync": "^2.26.3",
+    "clear": "^0.1.0",
     "cross-env": "^5.2.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "gulp-exec": "^3.0.2",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "ip": "^1.1.5",
     "keypress": "^0.2.1",
