--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zmnv-views",
-  "version": "1.5.5",
+  "version": "1.5.8",
   "description": "Simple html gallery generator. It takes image files in current directory and return simple html page with that images.",
   "preferGlobal": true,
   "main": "app.js",
@@ -30,6 +30,7 @@
     "copy-dir": "^0.4.0",
     "directory-tree": "^2.2.1",
     "express": "^4.16.4",
+    "prompt-confirm": "^2.0.4",
     "sanitize-filename": "^1.6.1",
     "zmnv-style-defaults": "^1.0.1"
   },
@@ -45,6 +46,7 @@
     "ip": "^1.1.5",
     "keypress": "^0.2.1",
     "opn": "^5.4.0",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "yn": "^3.0.0"
   }
 }
