--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zmnv-views",
-  "version": "1.5.8",
+  "version": "1.5.9",
   "description": "Simple html gallery generator. It takes image files in current directory and return simple html page with that images.",
   "preferGlobal": true,
   "main": "app.js",
@@ -14,6 +14,7 @@
     "dev:checks": "cross-env LAYOUT=CHECKS npm run dev",
     "build": "node app.js && gulp sass",
     "serve": "node server.js",
+    "styles": "gulp sass",
     "prod": "npm run build && npm run serve",
     "prod:checks": "cross-env LAYOUT=CHECKS npm run prod",
     "clean": "gulp clean"
