--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zmnv-views",
-  "version": "1.6.1",
+  "version": "1.6.2",
   "description": "Simple html gallery generator. It takes image files in current directory and return simple html page with that images.",
   "preferGlobal": true,
   "main": "app.js",
@@ -35,6 +35,8 @@
     "prompt-confirm": "^2.0.4",
     "sanitize-filename": "^1.6.1",
     "semver": "^5.6.0",
+    "readline": "^1.3.0",
+    "keypress": "^0.2.1",
     "zmnv-style-defaults": "^1.0.1"
   },
   "devDependencies": {
@@ -46,9 +48,6 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "ip": "^1.1.5",
-    "keypress": "^0.2.1",
-    "opn": "^5.4.0",
-    "readline": "^1.3.0",
-    "yn": "^3.0.0"
+    "opn": "^5.4.0"
   }
 }
