--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "semver": "^5.6.0",
     "readline": "^1.3.0",
     "keypress": "^0.2.1",
-    "zmnv-style-defaults": "^1.0.1"
+    "zmnv-style-defaults": "^1.0.1",
+    "ip": "^1.1.5",
+    "opn": "^5.4.0"
   },
   "devDependencies": {
     "browser-sync": "^2.26.3",
@@ -46,8 +48,6 @@
     "gulp-clean": "^0.4.0",
     "gulp-exec": "^3.0.2",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "ip": "^1.1.5",
-    "opn": "^5.4.0"
+    "gulp-sass": "^4.0.2"
   }
 }
