--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zmnv-views",
-  "version": "1.6.5",
+  "version": "1.7.0",
   "description": "Simple html gallery generator. It takes image files in current directory and return simple html page with that images.",
   "preferGlobal": true,
   "main": "app.js",
@@ -27,19 +27,21 @@
   },
   "dependencies": {
     "chalk": "^2.4.2",
+    "clear": "^0.1.0",
     "commander": "^2.19.0",
     "copy-dir": "^0.4.0",
-    "clear": "^0.1.0",
+    "copy-paste": "^1.3.0",
     "directory-tree": "^2.2.1",
     "express": "^4.16.4",
+    "ip": "^1.1.5",
+    "keypress": "^0.2.1",
+    "opn": "^5.4.0",
     "prompt-confirm": "^2.0.4",
+    "readline": "^1.3.0",
+    "readline-sync": "^1.4.9",
     "sanitize-filename": "^1.6.1",
     "semver": "^5.6.0",
-    "readline": "^1.3.0",
-    "keypress": "^0.2.1",
-    "zmnv-style-defaults": "^1.0.1",
-    "ip": "^1.1.5",
-    "opn": "^5.4.0"
+    "zmnv-style-defaults": "^1.0.1"
   },
   "devDependencies": {
     "browser-sync": "^2.26.3",
